# x0

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: AGENTS.md  API.md  README.md
examples/: agent_example.py  ai_search_engine.py  chat_example.py  chat_with_memory.py  chat_with_vectordb.py  customer_service_chatbot.py  customer_service_chatbot_functional.py  gemni_test.py  model_router_example.py  scrape_and_store.py  web_automation_example.py
examples/chroma_db/: chroma.sqlite3
exo/: __init__.py
exo/agents/: __init__.py  base.py
exo/agents/agents/: search.py
exo/providers/: __init__.py  anthropic.py  base.py  gemni.py  model_router.py  ollama.py  openai.py  openrouter.py
exo/providers/context/: chat_history.py
exo/providers/vector_db/: __init__.py  base.py  chroma.py  in_memory.py
exo/tools/: __init__.py  base.py
exo/tools/tools/: scraper.py  search.py  web_automation.py
