[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exo"
version = "0.1.0"
description = "A Python library"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "google-generativeai",
]
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]

[project.urls]
Homepage = "https://github.com/yourusername/exo"
Repository = "https://github.com/yourusername/exo.git" 