[metadata]
name = exo
version = 0.1.0
description = A Python library
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test
python_functions = test_*

[coverage:run]
source = exo
omit = tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError 